feat: add references to DAB

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -65,6 +65,9 @@
             <h3>FM Radio</h3>
             <p>We broadcast across campus and the city of York on 88.3MHz FM.</p>
             <p>Whether you have a radio in your alarm clock or in your car (or even a 'proper' radio!), make sure to tune it to 88.3FM!</p>
+            <h3>Digital Radio</h3>
+            <p>Since September 2024 we have been avaliable on digital radio</p>
+            <p>Just look for the name URY on your digital radio</p>
             <h3>In Your Ears</h3>
             <p>URY can occasionally be heard out and about on campus, as we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night. If you hear us, come along and say hi!</p>
         </div>
@@ -134,6 +137,7 @@
       <p>In 2018 we were awarded a grant by the University of York of £40,000 to upgrade our studios, and upgrade them we certainly did. Brand new audio equipment, a total interior re-design, and fancy red/blue colour schemes to match, the 40K project, completed Christmas 2019 and fronted by some of URY's most dedicated members, allowed us to produce highly polished material while also giving the broader community in the University a place to create their own audio content.</p>
       <p>Over the decades we've enjoyed ourselves doing all manner of ridiculous things on and off-air. We pride ourselves on our innovative approach to radio that you will struggle to find in the industry, but luckily these ideas are recognised by industry professionals with a plethora of awards. In 2020, nearly 15 years since our last win for gold in the category - we won the gold award for Best Student Radio Station in the country at the Student Radio Awards. The judges praised the attention we gave to our audience and the novel ideas we pushed to the forefront of our content.</p>
       <p>In 2021, we were given a license to broadcast on FM at the same time as AM, getting us onto both 1350AM and 88.3FM. In 2023 we decided to finally turn off our AM transmitter for good. To send it off, we broke our previous record by doing a 135-hour long broadcast which included inviting back many of our alumni to do send off shows. As of the 26th of June 2023 we no longer broadcast on AM. </p>
+      <p>In 2024, we were given a license to broadcast on DAB, making us one of the first student radio stations to be on digital radio</p>
     </div>
   </div>
 </div>
