--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -62,12 +62,9 @@
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <h2>On Air</h2>
-            <h3>FM Radio</h3>
-            <p>We broadcast across campus and the city of York on 88.3MHz FM.</p>
-            <p>Whether you have a radio in your alarm clock or in your car (or even a 'proper' radio!), make sure to tune it to 88.3FM!</p>
-            <h3>Digital Radio</h3>
-            <p>Since September 2024 we have been avaliable on digital radio</p>
-            <p>Just look for the name URY on your digital radio</p>
+            <h3>FM and Digital Radio</h3>
+            <p>We broadcast across campus and the city of York on 88.3MHz FM and digital radio.</p>
+            <p>Whether you have a radio in your alarm clock or in your car (or even a 'proper' radio!), make sure to tune in.</p>
             <h3>In Your Ears</h3>
             <p>URY can occasionally be heard out and about on campus, as we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night. If you hear us, come along and say hi!</p>
         </div>
