--- a/views/elements/live_player.tmpl
+++ b/views/elements/live_player.tmpl
@@ -2,25 +2,29 @@
 
 <div class="row justify-content-center align-items-center mobile-column p-4 live-container" id="live-player-container">
 
-    <div class="live-now-playing">
-        <p id="live-player-track-container" style="display: none">
-            Now playing:<br/><b id="live-player-track-title"></b>
-            <span class="mobile-hide"> by <b id="live-player-track-artist"></b></span>
+    <div class="live-now-playing control-seg">
+        <p id="live-player-track-container">
+            Now playing:<br/>
+            <b id="live-player-track-title">University Radio York</b>
+            <span class="mobile-hide" id="live-player-track-artist-container" style="display: none"> by <b id="live-player-track-artist"></b></span>
         </p>
     </div>
 
-    <button class="p-4 play-pause-button" id="live-player-play">
-      <i class="fa fa-play"></i>
-    </button>
+    <div class="control-seg">
+      <button class="p-4 play-pause-button" id="live-player-play">
+        <i class="fa fa-play"></i>
+      </button>
 
-    <label>
-        Volume:<br>
-        <input type="range" min="0" max="11" step="1" name="volume" id="live-player-volume">
-    </label>
+      <div class="live-player-volume-cont">
+          <i class="fas fa-volume-off"></i>
+          <input type="range" min="0" max="11" step="1" name="volume" id="live-player-volume">
+          <i class="fas fa-volume-up"></i>
+      </div>
+    </div>
 
-    <p>
+    <!-- <p>
         <a href="//ury.org.uk/live/" onclick="window.open('//ury.org.uk/live', 'radioplayer', 'height=800,width=440'); window.livePlayer.pause(); return false;"><i>Pop-up player</i></a>
-    </p>
+    </p> -->
 </div>
 
 <script type="module">
