--- a/sass/elements/_livePlayer.scss
+++ b/sass/elements/_livePlayer.scss
@@ -1,3 +1,29 @@
+#live-player-popout-controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 1rem;
+
+    button {
+        border: none;
+        background-color: transparent;
+        color: white;
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: transform ease 200ms;
+        &:hover {
+            transform: scale(1.1);
+        }
+        &:focus {
+            outline: none;
+        }
+        &:active {
+            transform: scale(0.9);
+        }
+    }
+}
+
 .current-and-next-player:last-of-type{
   background-color: #dcdee0cc !important;
 }
