--- a/sass/elements/_livePlayer.scss
+++ b/sass/elements/_livePlayer.scss
@@ -3,13 +3,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 1rem;
+    margin: 1rem 1rem 0rem 1rem;
+    font-size: 1.4rem;
 
     button {
         border: none;
         background-color: transparent;
         color: white;
-        font-size: 1.2rem;
         cursor: pointer;
         transition: transform ease 200ms;
         &:hover {
